Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/SourceBreakerSettings__mdt.object-meta.xml
<CustomObject>
    <description>Location to configure and update key settings used in the SouceBreaker app, including field mappings.</description>
    <label>SourceBreaker Settings</label>
    <pluralLabel>SourceBreaker Settings</pluralLabel>
</CustomObject>