Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/Candidate_PageLayout__c.field-meta.xml
<CustomField>
    <fullName>Candidate_PageLayout__c</fullName>
    <label>Candidate Page Layout</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>