Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/CandidateEmail__c.field-meta.xml
<CustomField>
    <fullName>CandidateEmail__c</fullName>
    <label>Candidate Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>