Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/CandidateObject__c.field-meta.xml
<CustomField>
    <fullName>CandidateObject__c</fullName>
    <defaultValue>&quot;Contact&quot;</defaultValue>
    <inlineHelpText>API Name of the Candidate object.  Typically, this is just &apos;Contact&apos; in most environments.</inlineHelpText>
    <label>Candidate API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>