Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/CandidateParentObject__c.field-meta.xml
<CustomField>
    <fullName>CandidateParentObject__c</fullName>
    <inlineHelpText>API name of the type of object for the Candidate records Parent (if applicable).
eg, this might be &apos;Account&apos;, to use Contact-Account relationship.</inlineHelpText>
    <label>Candidate Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>