Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/CandidateParentRecord__c.field-meta.xml
<CustomField>
    <fullName>CandidateParentRecord__c</fullName>
    <inlineHelpText>If linking Candidate to a Parent record, what is the record name to find?
eg if linking all Candidates to an Account called &apos;Received Candidates&apos;.</inlineHelpText>
    <label>Candidate Parent Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>