Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/CandidateRecordType__c.field-meta.xml
<CustomField>
    <fullName>CandidateRecordType__c</fullName>
    <inlineHelpText>API Name of the Candidate RecordType</inlineHelpText>
    <label>Candidate RecordType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>