Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/CompanyID__c.field-meta.xml
<CustomField>
    <fullName>CompanyID__c</fullName>
    <inlineHelpText>If Company field is a lookup field to another object, use this to store the ID reference, instead of name/text.
Eg TalentRover custom &apos;Job Lead&apos; object</inlineHelpText>
    <label>Lead Company Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>