Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <inlineHelpText>If Company field isn&apos;t a lookup field, use this to store the Name instead of ID.
Eg Salesforce standard Lead object</inlineHelpText>
    <label>Lead Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>