Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/CompanySecret__c.field-meta.xml
<CustomField>
    <fullName>CompanySecret__c</fullName>
    <inlineHelpText>Please add this to enable SSO with the SourceBreaker App.  
This will be provided to you by SourceBreaker.</inlineHelpText>
    <label>Company Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>