Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Job Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>