Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>These values, line up to variables within the SbHelper Class.  And are required to ensure the correct environment mapping is used.</description>
    <inlineHelpText>If unsure of the namespace or package installed, please use &apos;Salesforce&apos; for generic mappings (ie Contact/Lead)</inlineHelpText>
    <label>Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bullhorn</fullName>
            </value>
            <value>
                <fullName>TalentRover</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>