Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/ExecSummary__c.field-meta.xml
<CustomField>
    <fullName>ExecSummary__c</fullName>
    <label>Executive Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>