Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/FullCandidateUpdate__c.field-meta.xml
<CustomField>
    <fullName>FullCandidateUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a duplicate is found (by email, phone or external ID), a &quot;Full Candidate Update&quot; will override any existing information on the record and any Skills and Employment History which has been parsed &amp; linked to the record.

THE DEFAULT VALUE IS &quot;FALSE&quot;</description>
    <inlineHelpText>If a duplicate is found (by email, phone or external ID), a &quot;Full Candidate Update&quot; will override any existing information on the record and any Skills and Employment History which has been parsed &amp; linked to the record.</inlineHelpText>
    <label>Full Candidate Update</label>
    <type>Checkbox</type>
</CustomField>