Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <label>Home Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>