Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/HourlyCurrent__c.field-meta.xml
<CustomField>
    <fullName>HourlyCurrent__c</fullName>
    <label>Rate: Hourly Current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>