Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/HourlyDesired__c.field-meta.xml
<CustomField>
    <fullName>HourlyDesired__c</fullName>
    <label>Rate: Hourly Desired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>