Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/JobBoard__c.field-meta.xml
<CustomField>
    <fullName>JobBoard__c</fullName>
    <label>Job Board</label>
    <length>255</length>
    <type>Text</type>
</CustomField>