Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <label>Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>