Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>