Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/Lead_PageLayout__c.field-meta.xml
<CustomField>
    <fullName>Lead_PageLayout__c</fullName>
    <label>Lead Page Layout</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>