Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/LeadEmail__c.field-meta.xml
<CustomField>
    <fullName>LeadEmail__c</fullName>
    <label>Lead Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>