Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/LeadLastName__c.field-meta.xml
<CustomField>
    <fullName>LeadLastName__c</fullName>
    <inlineHelpText>Typically would only be needed if using the default Lead Salesforce object.</inlineHelpText>
    <label>Lead LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>