Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/LeadObject__c.field-meta.xml
<CustomField>
    <fullName>LeadObject__c</fullName>
    <defaultValue>&quot;Lead&quot;</defaultValue>
    <inlineHelpText>API Name of the Contact object. Typically, this is just &apos;Lead&apos; in most environments, to use the default Lead object in Salesforce.</inlineHelpText>
    <label>Lead API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>