Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/LeadParentObject__c.field-meta.xml
<CustomField>
    <fullName>LeadParentObject__c</fullName>
    <inlineHelpText>If Job Lead, links to another parent object (eg Account), then add the API name of the object here.</inlineHelpText>
    <label>Lead Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>