Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/LeadPhone__c.field-meta.xml
<CustomField>
    <fullName>LeadPhone__c</fullName>
    <label>Lead Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>