Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <label>Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>