Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/MailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>MailingPostalCode__c</fullName>
    <label>Mailing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>