Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/MailingState__c.field-meta.xml
<CustomField>
    <fullName>MailingState__c</fullName>
    <label>Mailing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>