Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/MailingStreet__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet__c</fullName>
    <label>Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>