Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>Mobile Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>