Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/OtherPhone__c.field-meta.xml
<CustomField>
    <fullName>OtherPhone__c</fullName>
    <label>Other Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>