Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/ParentID__c.field-meta.xml
<CustomField>
    <fullName>ParentID__c</fullName>
    <inlineHelpText>API name of the relationship field from the Candidate to its Parent (if applicable).
eg, this might be an placeholder Account that Candidates link to.</inlineHelpText>
    <label>Candidate Parent Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>