Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/SalaryCurrent__c.field-meta.xml
<CustomField>
    <fullName>SalaryCurrent__c</fullName>
    <label>Salary: Current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>