Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/SalaryDesired__c.field-meta.xml
<CustomField>
    <fullName>SalaryDesired__c</fullName>
    <label>Salary: Desired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>