Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/SBCallout__c.field-meta.xml
<CustomField>
    <fullName>SBCallout__c</fullName>
    <description>The URL to callout to SourceBreaker, allowing for PDF version of CV to be attached the any parsed Candidate records.</description>
    <inlineHelpText>The URL for SourceBreaker, notifies that new record has been created/updated via CV parser. If changed, note this URL must also be added to Remote Site Settings</inlineHelpText>
    <label>SB Notice</label>
    <required>true</required>
    <type>Url</type>
</CustomField>