Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/SendEmail__c.field-meta.xml
<CustomField>
    <fullName>SendEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For sending automated debug information regarding Apex/Integration errors.</inlineHelpText>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>