Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/SourceActive__c.field-meta.xml
<CustomField>
    <fullName>SourceActive__c</fullName>
    <inlineHelpText>If there is an active flag (boolean/checkbox) for Candidate Source.
Typically used in mapping for Jobscience/Bullhorn for SF.</inlineHelpText>
    <label>Source Active</label>
    <length>255</length>
    <type>Text</type>
</CustomField>