Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/SourceID__c.field-meta.xml
<CustomField>
    <fullName>SourceID__c</fullName>
    <inlineHelpText>If &apos;Source&apos; is a lookup to another record, map the field here (eg in Jobscience/Bullhorn for Salesforce).  And then ensure you update mapping in &apos;Source Mapping&apos; below.</inlineHelpText>
    <label>Source ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>