Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/SourceName__c.field-meta.xml
<CustomField>
    <fullName>SourceName__c</fullName>
    <inlineHelpText>Source Name.
Please map this if you have not mapped &apos;Source ID&apos; above.  Or please use both &apos;Source ID&apos; and &apos;Source Name&apos; if there is a seperate Source object.</inlineHelpText>
    <label>Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>