Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/SourceType__c.field-meta.xml
<CustomField>
    <fullName>SourceType__c</fullName>
    <inlineHelpText>Type of Source.  
Please only use this if you have mapped &apos;Source ID&apos; above.</inlineHelpText>
    <label>Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>