Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/SupportEmail__c.field-meta.xml
<CustomField>
    <fullName>SupportEmail__c</fullName>
    <inlineHelpText>Email Address for sending the automated error reports.</inlineHelpText>
    <label>Support Email</label>
    <type>Email</type>
</CustomField>