Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/TextResume__c.field-meta.xml
<CustomField>
    <fullName>TextResume__c</fullName>
    <label>Text Resume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>