Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>