Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/validationRules/Company_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(CompanyName__c) &amp;&amp; LeadObject__c == &apos;Lead&apos;</errorConditionFormula>
    <errorDisplayField>CompanyName__c</errorDisplayField>
    <errorMessage>If you are using the default Salesforce lead object, please ensure you add a CompanyName mapping first.</errorMessage>
</ValidationRule>