Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/validationRules/Select_Lead_Company_ID_or_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Lead_Company_ID_or_Name</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(CompanyID__c) &amp;&amp; !ISBLANK(CompanyName__c)</errorConditionFormula>
    <errorDisplayField>CompanyID__c</errorDisplayField>
    <errorMessage>Please select either a Company ID or Company Name mapping.  Most environments do not support both together.</errorMessage>
</ValidationRule>