Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/validationRules/Source_ID_not_reqd.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_ID_not_reqd</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(SourceObject__c) &amp;&amp; NOT(ISBLANK(SourceID__c))</errorConditionFormula>
    <errorMessage>No &apos;Source Object&apos; defined.  
Please only map Source ID, if there is also a Source Object defined.</errorMessage>
</ValidationRule>