Frankbelford/uatv1ba/force-app/main/default/objects/SourceBreakerSettings__mdt/validationRules/Source_ID_reqd.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_ID_reqd</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(SourceObject__c)) &amp;&amp; (ISBLANK(SourceID__c) || ISBLANK(SourceName__c))</errorConditionFormula>
    <errorMessage>Please ensure that Source Name and Source ID also have a field mapping defined.</errorMessage>
</ValidationRule>